1.96    2023-02-04

- Add Devel::AssertOS::MacOSX::v13

1.95    2022-10-29

- Add Devel::AssertOS::HWCapabilities::Int{32,64}

1.94    2022-07-27

- Add Mac OS 12 (Monterey)

1.93    2022-04-25

- No functional changes, just changes to where dependencies are declared
  https://github.com/DrHyde/perl-modules-Devel-CheckOS/issues/27

1.92    2022-04-24

- Fix bugs in new alias and case-insensitivity features which meant everything
  broke in taint-mode. The new features now no longer work in taint-mode but
  everything else should.

1.91    2022-04-21

- Fix tests for platforms where the OS is detected as something that is
  a family, but not as anything more specific, such as Fedora Linux

1.90    2022-04-20

- Matches are now case-insensitive

- Add support for OS aliases

- Deprecated the list_* functions being context sensitive, they now warn
  when called inappropriately. They will stop being context-sensitive some
  time after April 2024.

1.87    2021-05-25

- Add support for Devuan Linux

1.86    2021-05-20

- Belatedly add doco on Debian family to Families.pod

- Add Mac OS 11 (Big Sur)

1.85    2020-10-15      Add Linux::Raspbian and Linux::Ubuntu;
                        Add Linux::RealDebian for *actual* Debian Linux;
                        Add Linux::UnknownDebianLike for anything else that's like Debian;
                        Linux::Debian has become a family that includes all the above

1.84    2020-10-05      Add some more versions of MacOS;
                        Note change of name Mac OS X -> MacOS, but don't
                          change the module name for backward compatibility;
                        Add MSYS (reported by perl in MinGW environments)

1.83    2020-02-15      Remove dependency on Data::Compare, which in turn
                          depends on non-pure-perl XS in Clone.pm

1.82    2020-02-15      Fix build bug affecting perl 5.8 when AUTOMATED_TESTING