@@ -14,6 +14,6 @@ jobs:
         run: |
           cpanm --notest Expect
           cpanm --installdeps .
-          perl makefile-expect-driver.pl Linux::Debian Linux::Ubuntu Linux Unix OSFeatures::POSIXShellRedirection HWCapabilities::Int64
+          perl makefile-expect-driver.pl Linux::Debian Linux::Ubuntu Linux Unix OSFeatures::Systemd OSFeatures::POSIXShellRedirection HWCapabilities::Int64
           cpanm Devel::Cover::Report::Coveralls
           cover -test -report Coveralls
