@@ -2,6 +2,8 @@
 
 - Add Devel::AssertOS::MacOSX::v13
 
+- Add Devel::AssertOS::OSFeatures::Systemd
+
 1.95    2022-10-29
 
 - Add Devel::AssertOS::HWCapabilities::Int{32,64}
